2009-02-20  Jaroslav Hajek  <highegg@gmail.com>

	* oct-sort.h (octave_sort<T>::MergeState::MergeState): New
	constructor.
	(octave_sort<T>::MergeState::~MergeState): New destructor.
	(octave_sort<T>::MergeState::reset, 
	octave_sort<T>::MergeState::getmem,
	octave_sort<T>::MergeState::getmemi): New methods.
	(octave_sort<T>::sort,
	octave_sort<T>::merge_lo, octave_sort<T>::merge_hi
	octave_sort<T>::merge_at): Reflect change.

2009-02-19  Jaroslav Hajek  <highegg@gmail.com>

	* oct-types.h (sortmode): Move enum here.
	* oct-sort.h (octave_sort<T>::ms): Declare as pointer.
	(octave_sort<T>::lookup): New overloaded method.
	* oct-sort.cc: Reflect change to ms.
	(octave_sort<T>::lookup): New overloaded method.
	(out_of_range_pred): New helper class.
	(out_of_range): New helper function.
	* oct-lookup.h: Remove file.
	* Array.cc (Array<T>::lookup): New overloaded method.
	* Array.h: Declare it.

2009-02-18  John W. Eaton  <jwe@octave.org>

	* dbleQR.cc (QR::init, QR::form): Cast int to octave_idx_type in
	call to std::max.
	* floatQR.cc (FloatQR::init, FloatQR::form): Ditto.
	* CmplxQR.cc (ComplexQR::init, ComplexQR::form): Ditto.
	* fCmplxQR.cc (FloatComplexQR::init, FloatComplexQR::form): Ditto.

	* dbleQRP.cc (QRP::init): Cast int to octave_idx_type in call to
	std::max and as operand to -= operator.
	* CmplxQRP.cc (ComplexQRP::init): Ditto.
	* floatQRP.cc (FloatQRP::init): Ditto.
	* fCmplxQRP.cc (FloatComplexQRP::init): Ditto.

	* CDiagMatrix.cc, CDiagMatrix.h (ComplexDiagMatrix::inverse):
	Declare info as octave_idx_type, not int.
	* dDiagMatrix.cc, dDiagMatrix.h (DiagMatrix::inverse): Ditto.
	* fDiagMatrix.cc, fCDiagMatrix.h (FloatDiagMatrix::inverse): Ditto.
	* fCDiagMatrix.cc, fCDiagMatrix.h (FloatComplexDiagMatrix::inverse):
	Ditto.

	* dMatrix.cc (Matrix::determinant):
	Declare local variables volatile as needed to avoid "maybe
	clobbered by vfork" warning from GCC.
	* fMatrix.cc (FloatMatrix::determinant): Likewise.