@@ -387,6 +387,26 @@ ComplexDiagMatrix::inverse (octave_idx_type& info) const
   return retval;
 }
 
+ComplexDiagMatrix
+ComplexDiagMatrix::pseudo_inverse (void) const
+{
+  octave_idx_type r = rows ();
+  octave_idx_type c = cols ();
+  octave_idx_type len = length ();
+
+  ComplexDiagMatrix retval (c, r);
+
+  for (octave_idx_type i = 0; i < len; i++)
+    {
+      if (elem (i, i) != 0.0)
+        retval.elem (i, i) = 1.0 / elem (i, i);
+      else
+        retval.elem (i, i) = 0.0;
+    }
+
+  return retval;
+}
+
 bool
 ComplexDiagMatrix::all_elements_are_real (void) const
 {
