@@ -94,6 +94,7 @@ public:
 
   DiagMatrix inverse (void) const;
   DiagMatrix inverse (octave_idx_type& info) const;
+  DiagMatrix pseudo_inverse (void) const;
 
   // other operations
 
