@@ -94,6 +94,7 @@ public:
 
   FloatDiagMatrix inverse (void) const;
   FloatDiagMatrix inverse (octave_idx_type& info) const;
+  FloatDiagMatrix pseudo_inverse (void) const;
 
   // other operations
 
